# Home-Automation-Manager

./: .gitignore  CMakeLists.txt  README  Techtonium-CodingStyle.xml
Backend/: CMakeLists.txt  Main.cpp  TCPServer.cpp  TCPServer.h  TCPServerThread.cpp  TCPServerThread.h
Frontend/: CMakeLists.txt  HomeAutomationManagerFrontend.pro  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
HomeAutomation/: CMakeLists.txt  HarmanKardonAVR645Receiver.cpp  HarmanKardonAVR645Receiver.h  IReceiver.h
HomeAutomationManager/: CMakeLists.txt
HomeAutomationManagerFrontend/: HarmanKardonAVR645Receiver.cpp  HarmanKardonAVR645Receiver.h  HomeAutomationManagerFrontend.pro  harmankardonavr654receiver.cpp  harmankardonavr654receiver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  receiver.cpp  receiver.h
Tests/: CMakeLists.txt
